show all products for training set

--- a/app/views/training_sets/index.html.haml
+++ b/app/views/training_sets/index.html.haml
@@ -17,8 +17,8 @@
         %td= training_set.name
         %td= training_set.survey&.title
         %td
-          = link_to 'Configure', training_set, class: 'btn btn-xs btn-default'
-          = link_to "View Recommendations", training_set_evaluate_path(training_set), class: 'btn btn-xs btn-default'
+          = link_to 'View', training_set, class: 'btn btn-xs btn-default'
+          = link_to "Recommendations", training_set_evaluate_path(training_set), class: 'btn btn-xs btn-default'
           = link_to 'Delete', training_set, :method => :delete, :data => { :confirm => 'Are you sure?' }, class: 'btn btn-xs btn-danger'
 
 
