style/wording changes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,7 @@
 @import "bootstrap-sliders-custom";
 @import "helpers/mixins";
 @import "modules/navs";
+@import "modules/buttons";
 
 
 .main.container {
