--- a/app/assets/stylesheets/modules/_navs.scss
+++ b/app/assets/stylesheets/modules/_navs.scss
@@ -1,6 +1,6 @@
 .divider-vertical {
   height: $navbar-height;
-  margin: 0 9px;
+  margin: 0;
   border-right: 1px solid $red-002;
   //border-left: 1px solid #f2f2f2;
 }
