--- a/app/views/layouts/_top_nav.haml
+++ b/app/views/layouts/_top_nav.haml
@@ -1,5 +1,5 @@
 %nav.navbar.navbar-inverse.navbar-static-top
-  .container-fluid
+  .container
     .navbar-header
     .collapse.navbar-collapse
       %ul.nav.navbar-nav
