--- a/app/views/products/_breadcrumbs.haml
+++ b/app/views/products/_breadcrumbs.haml
@@ -1,2 +1,2 @@
 - unless params[:action] == 'index'
-  %p= link_to "&laquo; Product Catalog".html_safe, products_path
+  %p= link_to "&laquo; Products".html_safe, products_path
