--- a/app/assets/stylesheets/helpers/_variables.scss
+++ b/app/assets/stylesheets/helpers/_variables.scss
@@ -60,7 +60,7 @@ $gray:                   $gray-005 !default;
 $gray-light:             $gray-003 !default;
 $gray-lighter:           $gray-001 !default;
 
-$brand-primary:         $red-007 !default;
+$brand-primary:         $blue-005 !default;
 $brand-success:         #6A9D61 !default;
 $brand-info:            $blue-004 !default;
 $brand-warning:         #BF5733 !default;
@@ -87,7 +87,7 @@ $link-hover-decoration: underline !default;
 //== Typography
 //
 //## Font, line-height, and color for body text, headings, and more.
-$font-family-sans-serif:  'Open Sans', sans-serif, sans-serif !default;
+$font-family-sans-serif:  'Open Sans', sans-serif !default;
 $font-family-serif:       'Raleway', sans-serif !default;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 $font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace !default;
@@ -110,7 +110,7 @@ $line-height-base:        1.428571429 !default; // 20/14
 $line-height-computed:    floor(($font-size-base * $line-height-base)) !default; // ~20px
 
 //** By default, this inherits from the `<body>`.
-$headings-font-family:    inherit !default;
+$headings-font-family:    'Raleway', sans-serif !default;
 $headings-font-weight:    500 !default;
 $headings-line-height:    1.1 !default;
 $headings-color:          inherit !default;
@@ -137,7 +137,7 @@ $icon-font-svg-id:        "glyphicons_halflingsregular" !default;
 //## Define common padding and border radius sizes and more. Values based on 14px text and 1.428 line-height (~20px to start).
 
 $padding-base-vertical:     6px !default;
-$padding-base-horizontal:   12px !default;
+$padding-base-horizontal:   16px !default;
 
 $padding-large-vertical:    10px !default;
 $padding-large-horizontal:  16px !default;
@@ -146,7 +146,7 @@ $padding-small-vertical:    5px !default;
 $padding-small-horizontal:  10px !default;
 
 $padding-xs-vertical:       1px !default;
-$padding-xs-horizontal:     5px !default;
+$padding-xs-horizontal:     8px !default;
 
 $line-height-large:         1.3333333 !default; // extra decimals for Win 8.1 Chrome
 $line-height-small:         1.5 !default;
@@ -193,9 +193,9 @@ $table-border-color:            #ddd !default;
 
 $btn-font-weight:                normal !default;
 
-$btn-default-color:              #333 !default;
-$btn-default-bg:                 #fff !default;
-$btn-default-border:             #ccc !default;
+$btn-default-color:              #fff !default;
+$btn-default-bg:                 $gray-003 !default;
+$btn-default-border:             $gray-003 !default;
 
 $btn-primary-color:              #fff !default;
 $btn-primary-bg:                 $brand-primary !default;
