--- a/app/assets/stylesheets/helpers/_variables.scss
+++ b/app/assets/stylesheets/helpers/_variables.scss
@@ -32,6 +32,17 @@ $blue-006: rgb(16, 57, 77); // #10394D
 $blue-007: rgb(11, 38, 52); // #0B2634
 $blue-008: rgb(5, 18, 26); // #05131A
 
+$green-001: rgb(225, 235, 223); // #E1EBDF
+$green-002: rgb(210, 237, 205); // #D2EDCD
+$green-004: rgb(106, 157, 97); // #6A9D61
+$green-005: rgb(80, 118, 73); // #507649
+$green-006: rgb(53, 79, 49); // #354F31
+
+$orange-001: rgb(242, 221, 214); // #F2DDD6
+$orange-002: rgb(255, 199, 180); // #FFC7B4
+$orange-004: rgb(204, 121, 92); // #CC795C
+$orange-005: rgb(191, 87, 51); // #BF5733
+
 // Z-index scale
 $zIndex-1:   100;
 $zIndex-2:   200;
@@ -545,20 +556,20 @@ $jumbotron-heading-font-size:    ceil(($font-size-base * 4.5)) !default;
 //
 //## Define colors for form feedback states and, by default, alerts.
 
-$state-success-text:             #3c763d !default;
-$state-success-bg:               #dff0d8 !default;
+$state-success-text:             $green-005 !default;
+$state-success-bg:               $green-002 !default;
 $state-success-border:           darken(adjust-hue($state-success-bg, -10), 5%) !default;
 
-$state-info-text:                #31708f !default;
-$state-info-bg:                  #d9edf7 !default;
+$state-info-text:                $blue-005 !default;
+$state-info-bg:                  $blue-001 !default;
 $state-info-border:              darken(adjust-hue($state-info-bg, -10), 7%) !default;
 
-$state-warning-text:             #8a6d3b !default;
-$state-warning-bg:               #fcf8e3 !default;
+$state-warning-text:             $orange-005 !default;
+$state-warning-bg:               $orange-002 !default;
 $state-warning-border:           darken(adjust-hue($state-warning-bg, -10), 5%) !default;
 
-$state-danger-text:              #a94442 !default;
-$state-danger-bg:                #f2dede !default;
+$state-danger-text:              $red-006 !default;
+$state-danger-bg:                $red-001 !default;
 $state-danger-border:            darken(adjust-hue($state-danger-bg, -10), 5%) !default;
 
 
