adjustments on custom simple form wrapper, text changes

--- a/app/views/survey_question_options/edit.html.haml
+++ b/app/views/survey_question_options/edit.html.haml
@@ -1,4 +1,4 @@
-%h1 Editing quiz question option
+%h1 Edit quiz question option
 
 
 = render 'form', url: survey_multiple_choice_question_option_path(@survey, @survey_question, @survey_question_option)
