--- a/app/views/survey_questions/multiple_choices/_form.html.haml
+++ b/app/views/survey_questions/multiple_choices/_form.html.haml
@@ -3,7 +3,7 @@
 
   .form-inputs
     = f.input :prompt
-    = f.input :secondary_prompt, label: 'Prompt for explanatory text response'
+    = f.input :secondary_prompt, label: "Prompt for additional text response, e.g. \'Other\' or \'Please Describe\' (Optional)"
 
   .form-actions
     = f.button :submit, 'Save'
