--- a/app/views/survey_questions/multiple_choices/edit.html.haml
+++ b/app/views/survey_questions/multiple_choices/edit.html.haml
@@ -1,4 +1,4 @@
-%h1 Editing Multiple Choice Question
+%h1 Edit Multiple Choice Question
 
 
 = render 'form', url: survey_multiple_choice_question_path(@survey, @survey_question)
