--- a/app/views/survey_questions/ranges/_form.html.haml
+++ b/app/views/survey_questions/ranges/_form.html.haml
@@ -6,7 +6,7 @@
     = f.input :min_label, label: "Left Label"
     = f.input :max_label, label: "Right Label"
     = f.input :mid_label, label: "Center Label (optional)"
-    = f.input :secondary_prompt, label: 'Prompt for explanatory text response'
+    = f.input :secondary_prompt, label: "Prompt for additional text response, e.g. \'Other\' or \'Please Describe\' (Optional)"
 
   .form-actions
     = f.button :submit, 'Save'
