--- a/app/views/survey_questions/ranges/edit.html.haml
+++ b/app/views/survey_questions/ranges/edit.html.haml
@@ -1,4 +1,4 @@
-%h1 Editing Slider Question
+%h1 Edit Slider Question
 
 
 = render 'form', url: survey_range_question_path(@survey, @survey_question)
