--- a/app/views/surveys/show.html.haml
+++ b/app/views/surveys/show.html.haml
@@ -2,14 +2,7 @@
   = @survey.title
   = link_to "Edit Title", edit_survey_path(@survey), class: 'btn btn-default btn-sm'
 
-.btn-group
-  %a.btn.btn-primary.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
-    Add New Question
-    %span.caret
-  %ul.dropdown-menu
-    %li= link_to "Multiple Choice", new_survey_multiple_choice_question_path(@survey)
-    %li= link_to "Text", new_survey_text_question_path(@survey)
-    %li= link_to "Range", new_survey_range_question_path(@survey)
+= link_to "Add New Question", new_survey_question_path(@survey), class: 'btn btn-primary'
 
 
 %p
