--- a/app/views/home_pages/show.html.haml
+++ b/app/views/home_pages/show.html.haml
@@ -1,12 +1,14 @@
-%h1 Wrapt
+.row
+  .col-sm-12
+    %h1 Wrapt
 
-%p Welcome!
+    %p Welcome!
 
-%p This preliminary tool allows site administrators to create a catalog of Products, design Quizzes for creating a gift recipient portrait, and create Training Sets that control how quiz responses impact product recommendations.
+    %p This preliminary tool allows site administrators to create a catalog of Products, design Quizzes for creating a gift recipient portrait, and create Training Sets that control how quiz responses impact product recommendations.
 
-%ul.nav.nav-pills.nav-stacked
-  %li= link_to "Products", products_path
-  %li= link_to "Quiz Builder", surveys_path
-  %li= link_to "Training Sets", training_sets_path
-  %li= link_to "Profile Sets", profile_sets_path
+    %ul.nav.nav-pills.nav-stacked
+      %li= link_to "Products", products_path
+      %li= link_to "Quiz Builder", surveys_path
+      %li= link_to "Training Sets", training_sets_path
+      %li= link_to "Profile Sets", profile_sets_path
 
