--- a/app/views/products/_breadcrumbs.haml
+++ b/app/views/products/_breadcrumbs.haml
@@ -1,2 +1,4 @@
 - unless params[:action] == 'index'
-  %p= link_to "&laquo; Products".html_safe, products_path
+  .row.breadcrumbs
+    .col-sm-12
+      = link_to "&laquo; Products".html_safe, products_path
