--- a/app/views/profile_set_survey_responses/_breadcrumbs.haml
+++ b/app/views/profile_set_survey_responses/_breadcrumbs.haml
@@ -1,2 +1,4 @@
 - unless params[:action] == 'index'
-  %p= link_to "&laquo; #{@profile_set.name}".html_safe, @profile_set
+  .row.breadcrumbs
+    .col-sm-12
+      = link_to "&laquo; #{@profile_set.name}".html_safe, @profile_set
