--- a/app/views/profile_set_survey_responses/edit.html.haml
+++ b/app/views/profile_set_survey_responses/edit.html.haml
@@ -1,3 +1,5 @@
-%h1 Edit Product Question
+.row
+  .col-sm-12
+    %h1 Edit Product Question
 
-= render 'form', url: profile_set_survey_response_path(@profile_set, @profile_set_survey_response)
+    = render 'form', url: profile_set_survey_response_path(@profile_set, @profile_set_survey_response)
