--- a/app/views/profile_set_survey_responses/new.html.haml
+++ b/app/views/profile_set_survey_responses/new.html.haml
@@ -1,3 +1,5 @@
-%h1 New Quiz Response
+.row
+  .col-sm-12
+    %h1 New Quiz Response
 
-= render 'form', url: profile_set_survey_responses_path(@profile_set)
+    = render 'form', url: profile_set_survey_responses_path(@profile_set)
