--- a/app/views/survey_questions/multiple_choices/edit.html.haml
+++ b/app/views/survey_questions/multiple_choices/edit.html.haml
@@ -1,4 +1,6 @@
-%h1 Edit Multiple Choice Question
+.row
+  .col-sm-12
+    %h1 Edit Multiple Choice Question
 
 
-= render 'form', url: survey_multiple_choice_question_path(@survey, @survey_question)
+    = render 'form', url: survey_multiple_choice_question_path(@survey, @survey_question)
