--- a/app/views/training_set_evaluations/_breadcrumbs.haml
+++ b/app/views/training_set_evaluations/_breadcrumbs.haml
@@ -1,1 +1,3 @@
-%p= link_to "&laquo; #{@training_set.name}".html_safe, @training_set
+.row.breadcrumbs
+  .col-sm-12
+    = link_to "&laquo; #{@training_set.name}".html_safe, @training_set
