--- a/app/views/training_set_product_questions/edit.html.haml
+++ b/app/views/training_set_product_questions/edit.html.haml
@@ -1,3 +1,5 @@
-%h1 Edit Product Question
+.row
+  .col-sm-12
+    %h1 Edit Product Question
 
-= render edit_body_partial @training_set_product_question
+    = render edit_body_partial @training_set_product_question
