--- a/app/views/product_categories/edit.html.haml
+++ b/app/views/product_categories/edit.html.haml
@@ -1,7 +1,9 @@
-%h1 Edit product_category
+.row
+  .col-sm-12
+    %h1 Edit product_category
 
-= render 'form'
+    = render 'form'
 
-= link_to 'Show', @product_category
-\|
-= link_to 'Back', product_categories_path
+    = link_to 'View', @product_category
+    \|
+    = link_to 'Back', product_categories_path
