--- a/app/views/product_categories/new.html.haml
+++ b/app/views/product_categories/new.html.haml
@@ -1,5 +1,7 @@
-%h1 New Product Category
+.row
+  .col-sm-12
+    %h1 New Product Category
 
-= render 'form'
+    = render 'form'
 
-= link_to 'Back', product_categories_path
+    = link_to 'Back', product_categories_path
