--- a/app/views/products/edit.html.haml
+++ b/app/views/products/edit.html.haml
@@ -1,7 +1,9 @@
-%h1 Edit product
+.row
+  .col-sm-12
+    %h1 Edit product
 
-= render 'form'
+    = render 'form'
 
-= link_to 'Show', @product
-\|
-= link_to 'Back', products_path
+    = link_to 'Show', @product
+    \|
+    = link_to 'Back', products_path
