--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -1,5 +1,7 @@
-%h1 New product
+.row
+  .col-sm-12
+    %h1 New product
 
-= render 'form'
+    = render 'form'
 
-= link_to 'Back', products_path
+    = link_to 'Back', products_path
