--- a/app/views/profile_sets/_breadcrumbs.haml
+++ b/app/views/profile_sets/_breadcrumbs.haml
@@ -1,6 +1,7 @@
 - unless params[:action] == 'index'
-  %p
-    = link_to "Profile Sets".html_safe, profile_sets_path
-    - if params[:action] == 'edit'
-      &raquo;
-      = link_to "#{@profile_set.name}".html_safe, @profile_set
+  .row.breadcrumbs
+    .col-sm-12
+      = link_to "Profile Sets".html_safe, profile_sets_path
+      - if params[:action] == 'edit'
+        &raquo;
+        = link_to "#{@profile_set.name}".html_safe, @profile_set
