--- a/app/views/survey_question_options/_breadcrumbs.haml
+++ b/app/views/survey_question_options/_breadcrumbs.haml
@@ -1,2 +1,3 @@
-
-%p= link_to "&laquo; #{@survey_question.prompt}".html_safe, survey_multiple_choice_question_path(@survey, @survey_question)
+.row.breadcrumbs
+  .col-sm-12
+    = link_to "&laquo; #{@survey_question.prompt}".html_safe, survey_multiple_choice_question_path(@survey, @survey_question)
