--- a/app/views/survey_question_options/edit.html.haml
+++ b/app/views/survey_question_options/edit.html.haml
@@ -1,4 +1,6 @@
-%h1 Edit quiz question option
+.row
+  .col-sm-12
+    %h1 Edit quiz question option
 
 
-= render 'form', url: survey_multiple_choice_question_option_path(@survey, @survey_question, @survey_question_option)
+    = render 'form', url: survey_multiple_choice_question_option_path(@survey, @survey_question, @survey_question_option)
