--- a/app/views/survey_question_options/new.html.haml
+++ b/app/views/survey_question_options/new.html.haml
@@ -1,6 +1,8 @@
-%h1 New Quiz Question Option
+.row
+  .col-sm-12
+    %h1 New Quiz Question Option
 
 
-= render 'form', url: survey_multiple_choice_question_options_path(@survey, @survey_question)
+    = render 'form', url: survey_multiple_choice_question_options_path(@survey, @survey_question)
 
-= link_to 'Back', edit_survey_path(@survey)
+    = link_to 'Back', edit_survey_path(@survey)
