--- a/app/views/survey_questions/ranges/edit.html.haml
+++ b/app/views/survey_questions/ranges/edit.html.haml
@@ -1,4 +1,6 @@
-%h1 Edit Slider Question
+.row
+  .col-sm-12
+    %h1 Edit Slider Question
 
 
-= render 'form', url: survey_range_question_path(@survey, @survey_question)
+    = render 'form', url: survey_range_question_path(@survey, @survey_question)
