--- a/app/views/survey_questions/texts/edit.html.haml
+++ b/app/views/survey_questions/texts/edit.html.haml
@@ -1,4 +1,6 @@
-%h1 Edit Text Question
+.row
+  .col-sm-12
+    %h1 Edit Text Question
 
 
-= render 'form', url: survey_text_question_path(@survey, @survey_question)
+    = render 'form', url: survey_text_question_path(@survey, @survey_question)
