--- a/app/views/survey_questions/texts/new.html.haml
+++ b/app/views/survey_questions/texts/new.html.haml
@@ -1,6 +1,8 @@
-%h1 New Text Question
+.row
+  .col-sm-12
+    %h1 New Text Question
 
 
-= render 'form', url: survey_text_questions_path(@survey)
+    = render 'form', url: survey_text_questions_path(@survey)
 
-= link_to 'Back', edit_survey_path(@survey)
+    = link_to 'Back', edit_survey_path(@survey)
