--- a/app/views/surveys/edit.html.haml
+++ b/app/views/surveys/edit.html.haml
@@ -1,13 +1,15 @@
-%h1 Edit Quiz
+.row
+  .col-sm-12
+    %h1 Edit Quiz
 
-= render 'form'
+    = render 'form'
 
-%h2
-  Questions
-  %small= link_to "Add New Question", new_survey_question_path(@survey), class: 'btn btn-primary'
-- @survey.questions.each_with_index do |question, i|
-  %p
-    #{i+1}.
-    = question.prompt
-    = link_to '[Edit]', edit_survey_question_path(@survey, question)
-    = link_to '[Delete]', survey_question_path(@survey, question), method: :delete, confirm: 'Are you sure?'
+    %h2
+      Questions
+      %small= link_to "Add New Question", new_survey_question_path(@survey), class: 'btn btn-primary'
+    - @survey.questions.each_with_index do |question, i|
+      %p
+        #{i+1}.
+        = question.prompt
+        = link_to '[Edit]', edit_survey_question_path(@survey, question)
+        = link_to '[Delete]', survey_question_path(@survey, question), method: :delete, confirm: 'Are you sure?'
