--- a/app/views/surveys/new.html.haml
+++ b/app/views/surveys/new.html.haml
@@ -1,6 +1,8 @@
-%h1 New Quiz
+.row
+  .col-sm-12
+    %h1 New Quiz
 
 
-= render 'form'
+    = render 'form'
 
-= link_to 'Back', surveys_path
+    = link_to 'Back', surveys_path
