--- a/app/views/surveys/show.html.haml
+++ b/app/views/surveys/show.html.haml
@@ -1,23 +1,26 @@
-%h1
-  = @survey.title
-  = link_to "Edit Title", edit_survey_path(@survey), class: 'btn btn-default btn-sm'
+.row.admin__intro
+  .col-sm-12
+    %h1
+      = @survey.title
+      = link_to "Edit Title", edit_survey_path(@survey), class: 'btn btn-default btn-sm'
+.row.admin__actions
+  .col-sm-12
+    .btn-group
+      %a.btn.btn-primary.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
+        Add New Question
+        %span.caret
+      %ul.dropdown-menu
+        %li= link_to "Multiple Choice", new_survey_multiple_choice_question_path(@survey)
+        %li= link_to "Text", new_survey_text_question_path(@survey)
+        %li= link_to "Range", new_survey_range_question_path(@survey)
+.row
+  .col-sm-12
+    %p
 
-.btn-group
-  %a.btn.btn-primary.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
-    Add New Question
-    %span.caret
-  %ul.dropdown-menu
-    %li= link_to "Multiple Choice", new_survey_multiple_choice_question_path(@survey)
-    %li= link_to "Text", new_survey_text_question_path(@survey)
-    %li= link_to "Range", new_survey_range_question_path(@survey)
-
-
-%p
-
-%ol(style="list-style: decimal inside; padding: 0;")
-  - @survey.questions.preload(:options).each_with_index do |question, i|
-    %li(style="margin: 10px 0;")
-      %i{class: question.system_type_label}
-      = render question_partial(question), question: question
+    %ol(style="list-style: decimal inside; padding: 0;")
+      - @survey.questions.preload(:options).each_with_index do |question, i|
+        %li(style="margin: 10px 0;")
+          %i{class: question.system_type_label}
+          = render question_partial(question), question: question
 
 
