--- a/app/views/training_set_evaluations/show.haml
+++ b/app/views/training_set_evaluations/show.haml
@@ -1,17 +1,19 @@
-%h1= @training_set_evaluation.training_set.name
+.row
+  .col-sm-12
+    %h1= @training_set_evaluation.training_set.name
 
-- if @training_set_evaluation.stale? || @recommendations_by_survey_response_id.empty?
-  %p We're still generating recommendations for this training set.  Please refresh the page.
+    - if @training_set_evaluation.stale? || @recommendations_by_survey_response_id.empty?
+      %p We're still generating recommendations for this training set.  Please refresh the page.
 
-- else
-  - @training_set_evaluation.profile_sets.preload(:survey_responses).each do |profile_set|  
-    %h3
-      Profile Set:
-      = profile_set.name
-    - profile_set.survey_responses.each do |response|
-      %h4= response.name
-      %table.table.table-bordered
-        %tr
-          - @recommendations_by_survey_response_id[response.id].sort_by(&:score).reverse.each do |recommendation|
-            %td= link_to "#{recommendation.product.title} (#{recommendation.score.round(2)})", recommendation.product
+    - else
+      - @training_set_evaluation.profile_sets.preload(:survey_responses).each do |profile_set|  
+        %h3
+          Profile Set:
+          = profile_set.name
+        - profile_set.survey_responses.each do |response|
+          %h4= response.name
+          %table.table.table-bordered
+            %tr
+              - @recommendations_by_survey_response_id[response.id].sort_by(&:score).reverse.each do |recommendation|
+                %td= link_to "#{recommendation.product.title} (#{recommendation.score.round(2)})", recommendation.product
           
