--- a/app/views/training_sets/_breadcrumbs.haml
+++ b/app/views/training_sets/_breadcrumbs.haml
@@ -1,6 +1,7 @@
 - if params[:action] != 'index'
-  %p
-    = link_to "Training Sets".html_safe, training_sets_path
-    - if params[:action] == 'edit'
-      &raquo;
-      = link_to "#{@training_set.name}".html_safe, @training_set
+  .row.breadcrumbs
+    .col-sm-12
+      = link_to "Training Sets".html_safe, training_sets_path
+      - if params[:action] == 'edit'
+        &raquo;
+        = link_to "#{@training_set.name}".html_safe, @training_set
