beginning interface for question builder

--- a/app/views/training_sets/show.html.haml
+++ b/app/views/training_sets/show.html.haml
@@ -35,5 +35,5 @@
 
 - content_for :page_js do
   :javascript
-    $('[data-view-questions-btn]').each(function(_i, element) { new App.ProductQuestionListLoader(element)} );
+    $('[data-view-questions-btn]').each(function(_i, element) { new App.Admin.ProductQuestionListLoader(element)} );
     
