question-type icons on survey questions editor. still needs edit button to only say 'edit'

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,8 +18,7 @@
 @import 'bootstrap-custom';
 @import "bootstrap-sliders-custom";
 @import "helpers/mixins";
-@import "modules/navs";
-@import "modules/buttons";
+@import "modules/admin/admin";
 
 
 .main.container {
