--- a/app/views/profile_sets/show.html.haml
+++ b/app/views/profile_sets/show.html.haml
@@ -2,7 +2,7 @@
   .col-sm-12
     %h1
       = @profile_set.name
-      = link_to 'Edit Title', edit_profile_set_path(@profile_set), class: 'btn btn-default'
+      = link_to 'Edit Title', edit_profile_set_path(@profile_set), class: 'btn btn-default btn-xs'
 
     %h3 Quiz Responses
     %p= link_to 'Add a New Survey Response', new_profile_set_survey_response_path(@profile_set), class: 'btn btn-success'
