--- a/app/views/surveys/edit.html.haml
+++ b/app/views/surveys/edit.html.haml
@@ -1,15 +1,5 @@
 .row
   .col-sm-12
-    %h1 Edit Quiz
+    %h1 Edit Quiz Title
 
     = render 'form'
-
-    %h2
-      Questions
-      %small= link_to "Add New Question", new_survey_question_path(@survey), class: 'btn btn-primary'
-    - @survey.questions.each_with_index do |question, i|
-      %p
-        #{i+1}.
-        = question.prompt
-        = link_to '[Edit]', edit_survey_question_path(@survey, question)
-        = link_to '[Delete]', survey_question_path(@survey, question), method: :delete, confirm: 'Are you sure?'
