--- a/app/views/surveys/_range_question.haml
+++ b/app/views/surveys/_range_question.haml
@@ -1,3 +1,3 @@
 = question.prompt
 = link_to "Edit #{question.type_label} Question", edit_survey_range_question_path(@survey, question), class: 'btn btn-default btn-xs'
-= link_to 'Delete', survey_range_question_path(@survey, question), method: :delete, confirm: 'Are you sure?', class: 'btn btn-danger btn-xs'
+= link_to 'Delete', survey_range_question_path(@survey, question), method: :delete, data: {confirm: "This will delete '#{question.prompt}'"}, class: 'btn btn-danger btn-xs'
