--- a/app/views/surveys/show.html.haml
+++ b/app/views/surveys/show.html.haml
@@ -15,7 +15,7 @@
         %li.question-list__item
           %i.question-list__icon{class: question.system_type_label}
           = question.prompt
-          = link_to "Edit #{question.type_label} Question", edit_survey_question_path(@survey, question), class: 'btn btn-default btn-xs'
-          = link_to 'Delete', survey_question_path(@survey, question), method: :delete, confirm: 'Are you sure?', class: 'btn btn-danger btn-xs'
+          = link_to "Edit", edit_survey_question_path(@survey, question), class: 'btn btn-default btn-xs'
+          = link_to 'Delete', survey_question_path(@survey, question), method: :delete, confirm: "This will delete '#{question.prompt}'", class: 'btn btn-danger btn-xs'
 
 
