--- a/app/views/surveys/_multiple_choice_question.haml
+++ b/app/views/surveys/_multiple_choice_question.haml
@@ -1,4 +1,4 @@
 = question.prompt
-= link_to "Edit #{question.type_label} Question", edit_survey_multiple_choice_question_path(@survey, question), class: 'btn btn-default btn-xs'
+= link_to "Edit", edit_survey_multiple_choice_question_path(@survey, question), class: 'btn btn-default btn-xs'
 = link_to 'Manage Options', survey_multiple_choice_question_path(@survey, question), class: 'btn btn-default btn-xs'
 = link_to 'Delete', survey_multiple_choice_question_path(@survey, question), method: :delete, data: {confirm: "This will delete '#{question.prompt}'"}, class: 'btn btn-danger btn-xs'
