--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -14,6 +14,9 @@
     .row
       .col-xs-2
         = f.input :price
+    .row
+      .col-xs-4
+        = f.input :wrapt_sku, label: 'Wrapt SKU'
     = f.input :public
 
     %h3 Categories
