form width adjustments, shadow boxes on survey builder

--- a/app/assets/stylesheets/helpers/_mixins.scss
+++ b/app/assets/stylesheets/helpers/_mixins.scss
@@ -1,3 +1,23 @@
 // font-family: 'Raleway', sans-serif;
 // font-family: 'Open Sans', sans-serif;
 // font-family: 'Open Sans Condensed', sans-serif;
+
+@mixin shadowed-box__01 {
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+@mixin shadowed-box__01-hover {
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+@mixin shadowed-box__02 {
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+@mixin shadowed-box__03 {
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+@mixin shadowed-box__04 {
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+@mixin shadowed-box__05 {
+  box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+}
