--- a/app/views/survey_questions/edit.haml
+++ b/app/views/survey_questions/edit.haml
@@ -1,5 +1,5 @@
-%row
-  .col-sm-6
+.row
+  .col-sm-6.shadowed-box__01.form-panel__left
     %h2.heading__has-icon
       %i{class: @survey_question.system_type_label}
       Edit 
