--- a/app/assets/stylesheets/modules/admin/_lists.scss
+++ b/app/assets/stylesheets/modules/admin/_lists.scss
@@ -1,5 +1,6 @@
+.admin-index-list li,
 .question-list__item {
-  margin-bottom: 18px;
+  margin-top: 18px;
 }
 .question-list__icon {
   background-position: left center;
