--- a/app/views/profile_set_survey_responses/new.html.haml
+++ b/app/views/profile_set_survey_responses/new.html.haml
@@ -1,5 +1,6 @@
 .row
   .col-sm-12
     %h1 New Quiz Response
-
+.row
+  .col-sm-6
     = render 'form', url: profile_set_survey_responses_path(@profile_set)
