--- a/app/views/survey_questions/new.haml
+++ b/app/views/survey_questions/new.haml
@@ -1,11 +1,13 @@
-%h1 New Question
+.row
+  .col-sm-6
+    %h1 New Question
 
-= simple_form_for @survey_question, url: survey_questions_path(@survey) do |f|
-  = f.error_notification
+    = simple_form_for @survey_question, url: survey_questions_path(@survey) do |f|
+      = f.error_notification
 
-  .form-inputs
-    = f.input :prompt
-    = f.input :type, as: :select, collection: SurveyQuestion::TYPES, include_blank: false, label_method: :last, value_method: :first, label: "Question Type"
+      .form-inputs
+        = f.input :prompt
+        = f.input :type, as: :select, collection: SurveyQuestion::TYPES, include_blank: false, label_method: :last, value_method: :first, label: "Question Type"
 
-  .form-actions
-    = f.button :submit, 'Save'
+      .form-actions
+        = f.button :submit, 'Save'
