--- a/app/views/survey_questions/_option_row.haml
+++ b/app/views/survey_questions/_option_row.haml
@@ -2,7 +2,7 @@
   = option.text
   = link_to edit_survey_question_option_path(@survey, @survey_question, option), data: {remote: true, edit_option_link: option.id} do
     %span.glyphicon.glyphicon-pencil(aria-hidden="true")
-  = link_to edit_survey_question_option_image_path(@survey, @survey_question, option), data: {remote: true, edit_option_image_link: option.id} do
+  = link_to edit_survey_question_option_image_path(@survey, @survey_question, option), data: {remote: true, type: 'html', edit_option_image_link: option.id} do
     %span.glyphicon.glyphicon-picture
   = link_to survey_question_option_path(@survey, @survey_question, option), data: {method: :delete, remote: true, delete_option_link: option.id} do
     %span.glyphicon.glyphicon-remove(aria-hidden="true")
@@ -10,5 +10,7 @@
 - content_for :page_js do
   :javascript
     new App.Admin.SurveyQuestionBuilder.EditOptionLink($('[data-edit-option-link="#{option.id}"]')[0])
+
+    new App.Admin.SurveyQuestionBuilder.EditOptionLink($('[data-edit-option-image-link="#{option.id}"]')[0])
 
     new App.Admin.SurveyQuestionBuilder.DeleteOptionLink($('[data-delete-option-link="#{option.id}"]')[0])
