--- a/app/views/product_question_impacts/_edit_body_multiple_choice.haml
+++ b/app/views/product_question_impacts/_edit_body_multiple_choice.haml
@@ -5,12 +5,12 @@
     = render 'product_question_details'
 
     .form-group
-      %label Overall Question Importance
-      %br
-      .slider-with-labels
-        %span.slider-min-label Low
+      %h3 Overall Question Importance
+     
+      .slider-with-labels.clearfix
+        %span.slider-label.slider-label__min Low
         = f.input :question_impact, label: false, wrapper: false, input_html: { data: {provide: 'slider', slider_min: -1, slider_max: 1, slider_step: '.01', slider_tooltip: 'hide', slider_value: (f.object.question_impact), slider_selection: 'none' }}
-        %span.slider-min-label High
+        %span.slider-label.slider-label__max High
     
     %h3 Response Impacts
     %table.table
@@ -18,9 +18,11 @@
         %tr
           %td= response_impact_fields.object.survey_question_option.text
           %td
-            \-
+            %span.slider-label.slider-label__min
+              \-
             = response_impact_fields.input :impact, label: false, wrapper: false, input_html: { data: {provide: 'slider', slider_min: -1, slider_max: 1, slider_step: '.01', slider_tooltip: 'hide', slider_value: (response_impact_fields.object.impact), slider_selection: 'none' }}
-            +
+            %span.slider-label.slider-label__max
+              +
 
   .form-actions
     = f.button :submit, "Save"
