--- a/app/views/product_question_impacts/_edit_body_range.haml
+++ b/app/views/product_question_impacts/_edit_body_range.haml
@@ -6,12 +6,12 @@
     = render 'product_question_details'
 
     .form-group
-      %label Overall Question Importance
-      %br
-      .slider-with-labels
-        %span.slider-min-label Low
+      %h3 Overall Question Importance
+      
+      .slider-with-labels.clearfix
+        %span.slider-label.slider-label__min Low
         = f.input :question_impact, label: false, wrapper: false, input_html: { data: {provide: 'slider', slider_min: -1, slider_max: 1, slider_step: '.01', slider_tooltip: 'hide', slider_value: (f.object.question_impact), slider_selection: 'none' }}
-        %span.slider-min-label High
+        %span.slider-label.slider-label__max High
   .form-actions
     = f.submit "Save Importance", class: 'btn btn-primary'
 
@@ -24,10 +24,10 @@
       %th Impact
   %tbody
     %tr
-      %td= @training_set_product_question.survey_question.min_label
-      %td= @training_set_product_question.range_impact_direct_correlation? ? 'Negative' : 'Positive'
+      %td.slider-label.slider-label__min= @training_set_product_question.survey_question.min_label
+      %td.slider-control= @training_set_product_question.range_impact_direct_correlation? ? 'Negative' : 'Positive'
     %tr
-      %td= @training_set_product_question.survey_question.max_label
+      %td.slider-label.slider-label__max= @training_set_product_question.survey_question.max_label
       %td= @training_set_product_question.range_impact_direct_correlation? ? 'Positive' : 'Negative'
 
 = simple_form_for RangeImpactCorrelationSwitching.new(@training_set_product_question), url: training_set_product_question_range_impact_correlation_switchings_path(@training_set, @training_set_product_question) do |f|
