--- a/app/views/profile_sets/show.html.haml
+++ b/app/views/profile_sets/show.html.haml
@@ -5,12 +5,12 @@
       = link_to 'Edit Title', edit_profile_set_path(@profile_set), class: 'btn btn-default btn-xs'
 
     %h3 Quiz Responses
-    %p= link_to 'Add a New Survey Response', new_profile_set_survey_response_path(@profile_set), class: 'btn btn-success'
+    %p= link_to 'Add a New Survey Response', new_profile_set_survey_response_path(@profile_set), class: 'btn btn-primary'
 
     %table.table
       - @profile_set_survey_responses.each do |response|
         %tr
           %td= response.name
           %td
-            = link_to 'Edit', edit_profile_set_survey_response_path(@profile_set, response), class: 'btn btn-xs btn-primary'
+            = link_to 'Edit', edit_profile_set_survey_response_path(@profile_set, response), class: 'btn btn-xs btn-default'
             = link_to 'Delete', profile_set_survey_response_path(@profile_set, response), :method => :delete, :data => { :confirm => 'Are you sure?' }, class: 'btn btn-xs btn-danger'
