sliders alignment on profile sets survey response edit

--- a/app/assets/stylesheets/modules/admin/_forms.scss
+++ b/app/assets/stylesheets/modules/admin/_forms.scss
@@ -1,5 +1,6 @@
 .slider-label,
-.edit_training_set_product_question .slider-horizontal {
+.edit_training_set_product_question .slider-horizontal,
+.edit_profile_set_survey_response .slider-horizontal {
   float: left;
 }
 .slider-label__min {
