--- a/app/views/survey_questions/edit_multiple_choice.haml
+++ b/app/views/survey_questions/edit_multiple_choice.haml
@@ -1,5 +1,5 @@
 %row(data-survey-question-builder)
-  .col-sm-6
+  .col-sm-6.shadowed-box__01.form-panel__left
     %h2.heading__has-icon
       %i.multiple-choice 
       Edit Multiple-Choice Question
