--- a/app/views/survey_question_option_images/edit.haml
+++ b/app/views/survey_question_option_images/edit.haml
@@ -1,11 +1,19 @@
-= simple_form_for @survey_question_option, url: survey_question_option_image_path(@survey, @survey_question, @survey_question_option), remote: true do |form|
+= simple_form_for @survey_question_option, url: survey_question_option_image_path(@survey, @survey_question, @survey_question_option), remote: true, html: {data: {type: 'html', edit_option_image_form: true}} do |form|
   
   %p= @survey_question_option.text
 
   .form-inputs
-    = form.input :image, as: :file, label: "Add/Change Image"
-    = form.hidden_field :image_cache
     = image_tag @survey_question_option.image_url(:small) if @survey_question_option.image?
 
+    - verb = (@survey_question_option.image? ? 'Change' : 'Add' )
+    = form.input :image, as: :file, label: "#{verb} Image", input_html: {data: {survey_option_image_input: true}}
+    = form.hidden_field :image_cache
+
   .form-actions
-    = form.submit 'Save', class: 'btn btn-primary'
+    - if @survey_question_option.image?
+      = link_to 'Delete Image', survey_question_option_image_path(@survey, @survey_question, @survey_question_option), remote: true, method: :delete, class: 'btn btn-danger', data: {type: 'html', confirm: 'Are you sure you want to delete this image?'}
+    = link_to 'Cancel', survey_question_option_path(@survey, @survey_question, @survey_question_option), remote: true, class: 'btn btn-default', data: {type: 'html'}
+
+- content_for :page_js do
+  :javascript
+    new App.Admin.SurveyQuestionBuilder.EditOptionImageForm($('[data-edit-option-image-form]')[0])
