--- a/app/views/survey_questions/_option_row.haml
+++ b/app/views/survey_questions/_option_row.haml
@@ -14,6 +14,6 @@
   :javascript
     new App.Admin.SurveyQuestionBuilder.EditOptionLink($('[data-edit-option-link="#{option.id}"]')[0])
 
-    new App.Admin.SurveyQuestionBuilder.EditOptionLink($('[data-edit-option-image-link="#{option.id}"]')[0])
+    new App.Admin.SurveyQuestionBuilder.EditOptionImageLink($('[data-edit-option-image-link="#{option.id}"]')[0])
 
     new App.Admin.SurveyQuestionBuilder.DeleteOptionLink($('[data-delete-option-link="#{option.id}"]')[0])
