--- a/app/views/training_set_evaluations/_breadcrumbs.haml
+++ b/app/views/training_set_evaluations/_breadcrumbs.haml
@@ -1,3 +1,3 @@
 .row.breadcrumbs
   .col-sm-12
-    = link_to "&laquo; #{@training_set.name}".html_safe, @training_set
+    = link_to "&laquo; All Training Sets".html_safe, training_sets_path
