don't show nav on login

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -7,7 +7,8 @@
     %link{href: '//fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Open+Sans:400,600|Raleway:400,600', rel: 'stylesheet', type: 'text/css'}
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
-    = render 'layouts/top_nav'
+    - unless controller_name == "sessions"
+      = render 'layouts/top_nav'
     
 
 
