--- a/app/views/training_set_evaluations/show.haml
+++ b/app/views/training_set_evaluations/show.haml
@@ -12,8 +12,9 @@
           = profile_set.name
         - profile_set.survey_responses.each do |response|
           %h4= response.name
-          %table.table.table-bordered
-            %tr
-              - @recommendations_by_survey_response_id[response.id].sort_by(&:score).reverse.each do |recommendation|
-                %td= link_to "#{recommendation.product.title} (#{recommendation.score.round(2)})", training_set_evaluation_recommendation_path(@training_set, recommendation), data: {loads_in_pjax_modal: true}
-          
+          %ul          
+            - @recommendations_by_survey_response_id[response.id].sort_by(&:score).reverse.each do |recommendation|
+              %li
+                = "#{recommendation.product.title} (#{recommendation.score.round(2)})"
+                = link_to 'Breakdown', training_set_evaluation_recommendation_path(@training_set, recommendation), data: {loads_in_pjax_modal: true}, class: 'btn btn-default btn-xs'
+        
